added details and functionality

--- a/advanced-course.html
+++ b/advanced-course.html
@@ -119,10 +119,100 @@
                     </div>
                 </div>
             </div>
+
+            <div class="bg-white rounded-xl shadow-lg p-8 mb-12">
+                <h2 class="text-2xl font-bold mb-6 text-gray-800">Learning Materials</h2>
+                <p class="text-gray-600 mb-8">We use only the highest quality learning materials from renowned publishers and digital platforms to ensure your success:</p>
+                
+                <div class="grid md:grid-cols-2 gap-8">
+                    <div>
+                        <h3 class="text-xl font-bold mb-4 text-gray-800">Books & Publications</h3>
+                        <div class="flex flex-wrap gap-6 items-center">
+                            <div class="flex flex-col items-center">
+                                <img src="http://static.photos/black/120x120/1" alt="Heintges Logo" class="w-20 h-20 rounded-full mb-2">
+                                <span class="text-sm text-gray-600">Heintges Ballistics</span>
+                            </div>
+                            <div class="flex flex-col items-center">
+                                <img src="http://static.photos/black/120x120/2" alt="DJV Logo" class="w-20 h-20 rounded-full mb-2">
+                                <span class="text-sm text-gray-600">DJV Handbook</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-bold mb-4 text-gray-800">Digital Learning</h3>
+                        <div class="flex flex-wrap gap-6 items-center">
+                            <div class="flex flex-col items-center">
+                                <img src="http://static.photos/black/120x120/3" alt="Jägerschmiede Logo" class="w-20 h-20 rounded-full mb-2">
+                                <span class="text-sm text-gray-600">Jägerschmiede App</span>
+                            </div>
+                            <div class="flex flex-col items-center">
+                                <img src="http://static.photos/black/120x120/4" alt="Waidwissen Logo" class="w-20 h-20 rounded-full mb-2">
+                                <span class="text-sm text-gray-600">Waidwissen Platform</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- New Firearms Instruction Section -->
+            <div class="bg-white rounded-xl shadow-lg p-8 mb-12">
+                <h2 class="text-2xl font-bold mb-8 text-gray-800">Advanced Firearms Instruction</h2>
+                <p class="text-gray-600 mb-8">Take your shooting skills to the next level with our specialized training modules:</p>
+                
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                    <!-- Clay Pigeons -->
+                    <div class="firearm-card group">
+                        <div class="relative overflow-hidden rounded-lg h-64">
+                            <img src="http://static.photos/outdoor/640x360/14" 
+                                 alt="Advanced Clay Shooting" 
+                                 class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500">
+                            <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-20 transition-all duration-500"></div>
+                        </div>
+                        <h3 class="text-xl font-bold mt-4 text-gray-800 group-hover:text-black transition-colors">Competition Clays</h3>
+                        <p class="text-gray-600">Advanced skeet and trap techniques for competitive shooting scenarios.</p>
+                    </div>
+
+                    <!-- 100m Rifle -->
+                    <div class="firearm-card group">
+                        <div class="relative overflow-hidden rounded-lg h-64">
+                            <img src="http://static.photos/outdoor/640x360/15" 
+                                 alt="Precision Rifle Shooting" 
+                                 class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500">
+                            <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-20 transition-all duration-500"></div>
+                        </div>
+                        <h3 class="text-xl font-bold mt-4 text-gray-800 group-hover:text-black transition-colors">Precision Rifle</h3>
+                        <p class="text-gray-600">Long-range shooting techniques with wind reading and ballistic calculations.</p>
+                    </div>
+
+                    <!-- Sitting Position -->
+                    <div class="firearm-card group">
+                        <div class="relative overflow-hidden rounded-lg h-64">
+                            <img src="http://static.photos/outdoor/640x360/16" 
+                                 alt="Sitting Position Shooting" 
+                                 class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500">
+                            <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-20 transition-all duration-500"></div>
+                        </div>
+                        <h3 class="text-xl font-bold mt-4 text-gray-800 group-hover:text-black transition-colors">Sitting Position</h3>
+                        <p class="text-gray-600">Master stability and accuracy from sitting positions with various supports.</p>
+                    </div>
+
+                    <!-- Running Boar -->
+                    <div class="firearm-card group">
+                        <div class="relative overflow-hidden rounded-lg h-64">
+                            <img src="http://static.photos/outdoor/640x360/17" 
+                                 alt="Advanced Running Boar" 
+                                 class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500">
+                            <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-20 transition-all duration-500"></div>
+                        </div>
+                        <h3 class="text-xl font-bold mt-4 text-gray-800 group-hover:text-black transition-colors">Running Boar Pro</h3>
+                        <p class="text-gray-600">Advanced techniques for fast-moving targets with variable speeds.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <custom-footer></custom-footer>
-    <script src="components/navbar.js"></script>
+<custom-footer></custom-footer>
+<script src="components/navbar.js"></script>
     <script src="components/footer.js"></script>
     <script src="components/legal-popups.js"></script>
     <script src="components/contact-popup.js"></script>
