--- a/index.html
+++ b/index.html
@@ -61,8 +61,21 @@
                             <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Ballistics</span>
                             <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Tracking</span>
                         </div>
+                        <button class="mt-4 text-sm bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-4 rounded-lg transition duration-300 learn-more-btn" 
+                                data-teacher='{
+                                    "name": "Dieter Frühauf",
+                                    "title": "Founder & Chief Instructor",
+                                    "bio": "With over four decades of hunting experience across Europe and Africa, Dieter Frühauf brings unparalleled expertise to Jagdschule Frühauf. A former competitive marksman and professional hunting guide, Dieter has trained military and law enforcement personnel in precision shooting techniques. His conservation-focused approach emphasizes ethical hunting practices and sustainable wildlife management.",
+                                    "image": "http://static.photos/people/640x360/1",
+                                    "years": "40+",
+                                    "students": "2500+",
+                                    "certifications": "7",
+                                    "expertise": ["Ballistics", "Tracking", "Big Game", "Conservation", "Firearms"]
+                                }'>
+                            Learn more about me
+                        </button>
                     </div>
-                </div>
+</div>
                 <!-- Teacher 2 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden transition-transform duration-300 hover:scale-105">
                     <img src="http://static.photos/people/640x360/2" alt="Klara Bergmann" class="w-full h-64 object-cover">
@@ -74,8 +87,21 @@
                             <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Biology</span>
                             <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Ethics</span>
                         </div>
+                        <button class="mt-4 text-sm bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-4 rounded-lg transition duration-300 learn-more-btn" 
+                                data-teacher='{
+                                    "name": "Dr. Klara Bergmann",
+                                    "title": "Wildlife Biologist & Conservation Specialist",
+                                    "bio": "Dr. Bergmann holds a PhD in Wildlife Management from the University of Munich and has published numerous papers on sustainable hunting practices. With field experience across three continents, she brings a global perspective to wildlife conservation. Her innovative approaches to human-wildlife conflict resolution have been adopted by several European wildlife agencies.",
+                                    "image": "http://static.photos/people/640x360/2",
+                                    "years": "15+",
+                                    "students": "1800+",
+                                    "certifications": "5",
+                                    "expertise": ["Biology", "Ethics", "Conservation", "Ecology", "Wildlife Law"]
+                                }'>
+                            Learn more about me
+                        </button>
                     </div>
-                </div>
+</div>
                 <!-- Teacher 3 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden transition-transform duration-300 hover:scale-105">
                     <img src="http://static.photos/people/640x360/3" alt="Hans Vogel" class="w-full h-64 object-cover">
@@ -87,8 +113,21 @@
                             <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Survival</span>
                             <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Navigation</span>
                         </div>
+                        <button class="mt-4 text-sm bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-4 rounded-lg transition duration-300 learn-more-btn" 
+                                data-teacher='{
+                                    "name": "Hans Vogel",
+                                    "title": "Field Survival Expert",
+                                    "bio": "A veteran of the German Special Forces, Hans Vogel brings 12 years of military survival training experience to Jagdschule Frühauf. His expertise in extreme environment survival has been tested in Arctic, desert, and jungle conditions. Hans has led numerous search-and-rescue operations and developed the survival curriculum now used by several European hunting associations.",
+                                    "image": "http://static.photos/people/640x360/3",
+                                    "years": "25+",
+                                    "students": "3200+",
+                                    "certifications": "6",
+                                    "expertise": ["Survival", "Navigation", "First Aid", "Tracking", "Shelter Building"]
+                                }'>
+                            Learn more about me
+                        </button>
                     </div>
-                </div>
+</div>
             </div>
         </div>
     </section>
@@ -151,11 +190,12 @@
                         <div class="text-center mb-4">
                             <a href="/basic-course.html" class="inline-block text-sm bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-4 rounded-lg transition duration-300">View Full Details</a>
                         </div>
-                        <div class="mt-auto">
-                            <div class="flex flex-col sm:flex-row gap-4">
-                                <a href="/basic-course.html" class="inline-block bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Enroll Now</a>
-                                <a href="/basic-course.html" class="inline-block border-2 border-[#40534C] text-[#40534C] hover:bg-[#40534C] hover:text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Course Details</a>
-                            </div>
+                    <div class="mt-auto">
+                        <div class="flex flex-col sm:flex-row gap-4">
+                            <a href="/basic-course.html" class="inline-block bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Enroll Now</a>
+                            <a href="/basic-course.html" class="inline-block border-2 border-[#40534C] text-[#40534C] hover:bg-[#40534C] hover:text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center">Course Details</a>
+                            <a href="/enrollment-form.pdf" class="inline-block border-2 border-[#40534C] text-[#40534C] hover:bg-[#40534C] hover:text-white font-bold py-2 px-6 rounded-lg transition duration-300 text-center" download>Download Form</a>
+                        </div>
 </div>
 </div>
                 </div>
@@ -196,9 +236,87 @@
             </div>
         </div>
     </section>
-<!-- Testimonials Section -->
-    <section class="py-20 px-4">
+    <!-- Hunting Grounds Section -->
+    <section id="hunting-grounds" class="py-20 bg-[#1A3636] px-4 text-white">
         <div class="max-w-6xl mx-auto">
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Our Exclusive Hunting Grounds</h2>
+            <p class="text-xl text-center max-w-3xl mx-auto mb-16 text-[#D6BD98]">Train in authentic environments across diverse terrains and wildlife habitats</p>
+            
+            <div class="grid md:grid-cols-3 gap-8">
+                <!-- Ground 1 -->
+                <div class="bg-white rounded-xl shadow-lg overflow-hidden text-gray-800">
+                    <img src="http://static.photos/forest/640x360/1" alt="Bavarian Forest" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-2xl font-bold mb-2">Bavarian Forest Reserve</h3>
+                        <p class="text-gray-600 mb-4">Our primary training ground with 5,000 acres of dense woodland, perfect for deer and boar hunting.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Red Deer</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Wild Boar</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Fox</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Ground 2 -->
+                <div class="bg-white rounded-xl shadow-lg overflow-hidden text-gray-800">
+                    <img src="http://static.photos/mountain/640x360/1" alt="Alpine Highlands" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-2xl font-bold mb-2">Alpine Highlands</h3>
+                        <p class="text-gray-600 mb-4">Chamois and ibex territory with challenging elevation changes and spectacular views.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Chamois</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Ibex</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Marmot</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Ground 3 -->
+                <div class="bg-white rounded-xl shadow-lg overflow-hidden text-gray-800">
+                    <img src="http://static.photos/lake/640x360/1" alt="Lake District" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-2xl font-bold mb-2">Lake District Wetlands</h3>
+                        <p class="text-gray-600 mb-4">Waterfowl and small game habitat with specialized blinds and boat access.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Duck</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Goose</span>
+                            <span class="bg-[#D6BD98] text-[#1A3636] text-sm px-3 py-1 rounded-full">Rabbit</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-16 bg-[#40534C] rounded-xl p-8">
+                <div class="grid md:grid-cols-2 gap-8 items-center">
+                    <div>
+                        <h3 class="text-2xl font-bold mb-4 text-white">Sustainable Hunting Practices</h3>
+                        <p class="text-[#D6BD98] mb-6">All our grounds are managed under strict conservation guidelines to maintain healthy wildlife populations and ecosystems.</p>
+                        <ul class="space-y-3 text-white">
+                            <li class="flex items-start">
+                                <i data-feather="check" class="text-[#D6BD98] mr-2 mt-1"></i>
+                                <span>Selective harvesting to maintain population balance</span>
+                            </li>
+                            <li class="flex items-start">
+                                <i data-feather="check" class="text-[#D6BD98] mr-2 mt-1"></i>
+                                <span>Habitat improvement projects</span>
+                            </li>
+                            <li class="flex items-start">
+                                <i data-feather="check" class="text-[#D6BD98] mr-2 mt-1"></i>
+                                <span>Regular wildlife population monitoring</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="rounded-xl overflow-hidden">
+                        <img src="http://static.photos/nature/640x360/1" alt="Conservation" class="w-full h-auto">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="py-20 px-4">
+<div class="max-w-6xl mx-auto">
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-16 text-gray-800">What Our Students Say</h2>
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Testimonial 1 -->
@@ -273,7 +391,11 @@
                     <label for="message" class="block mb-2 font-medium">Your Message</label>
                     <textarea id="message" rows="4" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#40534C] focus:border-transparent"></textarea>
                 </div>
-                <button type="submit" class="w-full bg-[#D6BD98] hover:bg-[#c9af7f] text-[#1A3636] font-bold py-3 px-6 rounded-lg transition duration-300">Send Message</button>
+                <div class="mb-6">
+                    <label for="enrollment-form" class="block mb-2 font-medium">Upload Completed Enrollment Form (PDF)</label>
+                    <input type="file" id="enrollment-form" accept=".pdf" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#40534C] focus:border-transparent">
+                </div>
+<button type="submit" class="w-full bg-[#D6BD98] hover:bg-[#c9af7f] text-[#1A3636] font-bold py-3 px-6 rounded-lg transition duration-300">Send Message</button>
             </form>
         </div>
     </section>
@@ -305,12 +427,14 @@
     <!-- Footer Component -->
     <custom-footer></custom-footer>
     <legal-popups></legal-popups>
+    <teacher-popup></teacher-popup>
 
     <!-- Component Scripts -->
     <script src="components/navbar.js"></script>
     <script src="components/footer.js"></script>
     <script src="components/legal-popups.js"></script>
-    <script src="script.js"></script>
+    <script src="components/teacher-popup.js"></script>
+<script src="script.js"></script>
     <script>feather.replace();</script>
 <script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
 </body>
