push assets directory to git

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <!-- Navbar Component -->
     <custom-navbar></custom-navbar>
     <!-- Hero Section -->
-    <section class="relative bg-cover bg-center h-screen animate-element" style="background-image: url('http://static.photos/nature/1200x630/42');">
+    <section class="relative bg-cover bg-center h-screen animate-element" style="background-image: url('assets/_pictures/trees-975091.jpg');">
 <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="relative z-10 flex flex-col justify-center items-center h-full text-center px-4">
-            <h1 class="text-5xl md:text-7xl font-bold text-white mb-6">Master the Art of Hunting</h1>
-            <p class="text-xl md:text-2xl text-white mb-8 max-w-2xl">Learn from the best hunters in Europe at Jagdschule Frühauf</p>
+            <h1 class="text-5xl md:text-7xl font-bold text-white mb-6">Ihr Weg zum Jagdschein – geführt von Fachleuten.</h1>
+            <p class="text-xl md:text-2xl text-white mb-8 max-w-2xl">Zum "grünem Abitur" mit Jagdschule Frühauf</p>
             <div class="flex flex-col sm:flex-row gap-4">
-                                <a href="#courses" class="bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-3 px-6 rounded-lg transition duration-300">Our Courses</a>
-                                <a href="#story" class="bg-[#D6BD98] hover:bg-[#c9af7f] text-[#1A3636] font-bold py-3 px-6 rounded-lg transition duration-300">Student Stories</a>
+                                <a href="#courses" class="bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-3 px-6 rounded-lg transition duration-300">Unsere Kurse</a>
+                                <a href="#story" class="bg-[#D6BD98] hover:bg-[#c9af7f] text-[#1A3636] font-bold py-3 px-6 rounded-lg transition duration-300">Erfahrungsberichte</a>
 </div>
         </div>
     </section>
@@ -28,18 +28,18 @@
     <!-- About Us Section -->
     <section id="about" class="py-20 px-4">
         <div class="max-w-6xl mx-auto">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800">About Jagdschule Frühauf</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800">Über Jagdschule Frühauf</h2>
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
-                    <p class="text-lg text-gray-600 mb-6">Founded in 1995, Jagdschule Frühauf has been the premier institution for hunting education in Central Europe. Our mission is to preserve hunting traditions while incorporating modern, ethical practices.</p>
-                    <p class="text-lg text-gray-600 mb-6">With over 5,000 graduates, we take pride in our comprehensive curriculum that covers everything from marksmanship to wildlife conservation.</p>
+                    <p class="text-lg text-gray-600 mb-6">In unserer Jagdschule werden Sie ausschließlich von erfahrenem Fachpersonal ausgebildet. Unser Team besteht aus qualifizierten Ausbildern, erfahrenen Jägern und Büchsenmachermeistern, die über jahrzehntelange praktische Erfahrung und tiefgehendes Fachwissen verfügen. Dieses Know-how aus der Praxis vermitteln wir Ihnen in einer Ausbildung, die höchsten professionellen Ansprüchen gerecht wird – kompetent, praxisnah und zielorientiert.</p>
+                    <p class="text-lg text-gray-600 mb-6">Gemeinsam mit unseren Partnern bieten wir Ihnen weit mehr als „nur“ eine fundierte Ausbildung. Auch nach erfolgreicher Jagdprüfung begleiten wir Sie weiterhin – ob in spezialisierten Seminaren, bei individuellen Beratungen oder beim Kauf Ihrer Jagdwaffen und des passenden Zubehörs.</p>
                     <div class="flex items-center gap-4">
                         <i data-feather="award" class="text-amber-700"></i>
-                        <span class="font-semibold">Certified by European Hunting Association</span>
+                        <span class="font-semibold"><a href="https://bildung.thueringen.de/bildung/bildungsfreistellung/" style="text-decoration: underline;">5 Tage schlauer werden zertifiziert</a></span>
                     </div>
                 </div>
                 <div class="rounded-xl overflow-hidden shadow-2xl">
-                    <img src="http://static.photos/outdoor/1024x576/10" alt="Hunting school campus" class="w-full h-auto">
+                    <img src="assets/_pictures/IMG_9679_breit.jpeg" alt="Hunting school campus" class="w-full h-auto">
                 </div>
             </div>
         </div>
@@ -48,31 +48,31 @@
     <!-- Our Teachers Section -->
     <section id="teachers" class="py-20 bg-gray-100 px-4">
         <div class="max-w-6xl mx-auto">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-16 text-gray-800">Meet Our Master Instructors</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-16 text-gray-800">Lerne unsere Experten kennen</h2>
             <div class="grid md:grid-cols-3 gap-8">
                 <!-- Teacher 1 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden transition-transform duration-300 hover:scale-105">
-                    <img src="http://static.photos/people/640x360/1" alt="Dieter Frühauf" class="w-full h-64 object-cover">
+                    <img src="assets/_pictures/Frühauf_Bild_klein.jpg" alt="Dieter Frühauf" class="w-full h-64 object-cover">
                     <div class="p-6">
-                        <h3 class="text-2xl font-bold mb-2 text-gray-800">Dieter Frühauf</h3>
-                        <p class="text-amber-700 font-semibold mb-4">Founder & Chief Instructor</p>
-                        <p class="text-gray-600 mb-4">40+ years hunting experience. Specializes in big game tracking and marksmanship.</p>
+                        <h3 class="text-2xl font-bold mb-2 text-gray-800">Marko Frühauf</h3>
+                        <p class="text-amber-700 font-semibold mb-4">Gründer & Büchsenmachermeister</p>
+                        <p class="text-gray-600 mb-4">30+ Jahre Erfahrung als Jäger. Spezialisiert auf Jagdwaffen und deren Handhabung.</p>
                         <div class="flex gap-2">
-                            <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Ballistics</span>
-                            <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Tracking</span>
+                            <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Schießtraining</span>
+                            <span class="bg-amber-100 text-amber-800 text-sm px-3 py-1 rounded-full">Waffenhandhabung</span>
                         </div>
                         <button class="mt-4 text-sm bg-[#40534C] hover:bg-[#1A3636] text-white font-bold py-2 px-4 rounded-lg transition duration-300 learn-more-btn" 
                                 data-teacher='{
-                                    "name": "Dieter Frühauf",
-                                    "title": "Founder & Chief Instructor",
-                                    "bio": "With over four decades of hunting experience across Europe and Africa, Dieter Frühauf brings unparalleled expertise to Jagdschule Frühauf. A former competitive marksman and professional hunting guide, Dieter has trained military and law enforcement personnel in precision shooting techniques. His conservation-focused approach emphasizes ethical hunting practices and sustainable wildlife management.",
-                                    "image": "http://static.photos/people/640x360/1",
+                                    "name": "Marko Frühauf",
+                                    "title": "Gründer & Büchsenmachermeister",
+                                    "bio": "Mit über 30 Jahren jagdlicher Erfahrung und einer Meisterqualifikation im Büchsenmacherhandwerk seit 1999 verbindet Marko Frühauf handwerkliche Präzision mit tiefem Fachwissen rund um Jagdwaffen und deren Handhabung. Als Gründer der Jagdschule steht er für höchste Ausbildungsqualität, technische Kompetenz und praxisorientierte Wissensvermittlung.",
+                                    "image": "assets/_pictures/Frühauf_Bild.jpg",
                                     "years": "40+",
-                                    "students": "2500+",
-                                    "certifications": "7",
-                                    "expertise": ["Ballistics", "Tracking", "Big Game", "Conservation", "Firearms"]
+                                    "students": "500+",
+                                    "certifications": "5",
+                                    "expertise": ["Schießausbildung", "langjährige Jagdpraxis", "Büchsenmacherhandwerk", "Waffenhandhabung"]
                                 }'>
-                            Learn more about me
+                            Erfahre mehr über mich!
                         </button>
                     </div>
 </div>
@@ -436,6 +436,5 @@
     <script src="components/teacher-popup.js"></script>
 <script src="script.js"></script>
     <script>feather.replace();</script>
-<script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
 </body>
 </html>
